[gd_scene load_steps=3 format=3 uid="uid://iniy0f0calli"]

[ext_resource type="Script" uid="uid://cnbgk5aa7bf7w" path="res://UI/Shared/person_info_label.gd" id="1_2ko22"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ko22"]
bg_color = Color(0.4812644, 0.4021538, 0.2953117, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.39607844, 0.21960784, 0.23137255, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PersonInfoLabel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ko22")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ko22")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PersonName" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="PersonAge" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
